[gd_scene load_steps=4 format=3 uid="uid://b26n8mifjbf5n"]

[ext_resource type="Script" uid="uid://b2gm1vj6akdx2" path="res://test/test_scene.gd" id="1_lr5j1"]
[ext_resource type="Script" uid="uid://c7lmt4ulhnywy" path="res://addons/area_marker_2d/area_marker_2d_node.gd" id="2_56kpk"]

[sub_resource type="LabelSettings" id="LabelSettings_lr5j1"]
font_size = 50

[node name="TestScene" type="Node2D"]
script = ExtResource("1_lr5j1")

[node name="AreaMarker2DLeft" type="Node2D" parent="."]
position = Vector2(288, 324)
script = ExtResource("2_56kpk")
size = Vector2(576, 648)
color = Color(0.6, 0.196078, 0.8, 0.137255)
filled = true
metadata/_custom_type_script = "uid://c7lmt4ulhnywy"

[node name="AreaMarker2DRight" type="Node2D" parent="."]
position = Vector2(864, 324)
script = ExtResource("2_56kpk")
size = Vector2(576, 648)
color = Color(0.496156, 0.434488, 0.141456, 0.454902)
filled = true
metadata/_custom_type_script = "uid://c7lmt4ulhnywy"

[node name="AreaMarker2DTop" type="Node2D" parent="."]
position = Vector2(571, 87)
script = ExtResource("2_56kpk")
size = Vector2(1028, 116)
color = Color(1, 0, 0, 1)
metadata/_custom_type_script = "uid://c7lmt4ulhnywy"

[node name="AreaMarker2DBottom" type="Node2D" parent="."]
position = Vector2(577, 563)
script = ExtResource("2_56kpk")
size = Vector2(1028, 116)
color = Color(0, 1, 0, 1)
metadata/_custom_type_script = "uid://c7lmt4ulhnywy"

[node name="MousePosLabel" type="Label" parent="."]
offset_left = 67.0
offset_top = 284.0
offset_right = 1082.0
offset_bottom = 353.0
text = "YOUR MOUSE IS ON THE RIGHT"
label_settings = SubResource("LabelSettings_lr5j1")
horizontal_alignment = 1
